# oca-technical

./: .gitignore  README.md
odoo-bringout-oca-brand-analytic_brand/: README.md  pyproject.toml
odoo-bringout-oca-brand-analytic_brand/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  USAGE.md
odoo-bringout-oca-brand-brand/: README.md  pyproject.toml
odoo-bringout-oca-brand-brand/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  SECURITY.md  USAGE.md
odoo-bringout-oca-brand-contract_brand/: README.md  pyproject.toml
odoo-bringout-oca-brand-contract_brand/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  USAGE.md
odoo-bringout-oca-brand-contract_forecast_brand/: README.md  pyproject.toml
odoo-bringout-oca-brand-contract_forecast_brand/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  USAGE.md
odoo-bringout-oca-brand-product_contract_brand/: README.md  pyproject.toml
odoo-bringout-oca-brand-product_contract_brand/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  USAGE.md
odoo-bringout-oca-brand-sale_payment_mode_brand/: README.md  pyproject.toml
odoo-bringout-oca-brand-sale_payment_mode_brand/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  USAGE.md
odoo-bringout-oca-connector-interfaces-connector_importer/: README.md  pyproject.toml
odoo-bringout-oca-connector-interfaces-connector_importer/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  SECURITY.md  USAGE.md
odoo-bringout-oca-crm-crm_security_group/: README.md  pyproject.toml
odoo-bringout-oca-crm-crm_security_group/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  SECURITY.md  USAGE.md
odoo-bringout-oca-ddmrp-ddmrp/: README.md  pyproject.toml
odoo-bringout-oca-ddmrp-ddmrp/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  REPORTS.md  SECURITY.md  USAGE.md
odoo-bringout-oca-ddmrp-ddmrp_adjustment/: README.md  pyproject.toml
odoo-bringout-oca-ddmrp-ddmrp_adjustment/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  SECURITY.md  USAGE.md
odoo-bringout-oca-ddmrp-ddmrp_exclude_moves_adu_calc/: README.md  pyproject.toml
odoo-bringout-oca-ddmrp-ddmrp_exclude_moves_adu_calc/doc/: ARCHITECTURE.md  CONFIGURATION.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  USAGE.md
odoo-bringout-oca-ddmrp-ddmrp_exclude_moves_adu_calc_sales/: README.md  pyproject.toml
odoo-bringout-oca-ddmrp-ddmrp_exclude_moves_adu_calc_sales/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  USAGE.md
odoo-bringout-oca-dms-dms_storage/: README.md  pyproject.toml
odoo-bringout-oca-dms-dms_storage/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  USAGE.md
odoo-bringout-oca-dms-dms_user_role/: README.md  pyproject.toml
odoo-bringout-oca-dms-dms_user_role/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  USAGE.md
odoo-bringout-oca-dms-web_editor_media_dialog_dms/: README.md  pyproject.toml
odoo-bringout-oca-dms-web_editor_media_dialog_dms/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  USAGE.md
odoo-bringout-oca-geospatial-base_geolocalize_company/: README.md  pyproject.toml
odoo-bringout-oca-geospatial-base_geolocalize_company/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  USAGE.md
odoo-bringout-oca-geospatial-geoengine_base_geolocalize/: README.md  pyproject.toml
odoo-bringout-oca-geospatial-geoengine_base_geolocalize/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  USAGE.md
odoo-bringout-oca-geospatial-web_view_leaflet_map/: README.md  pyproject.toml
odoo-bringout-oca-geospatial-web_view_leaflet_map/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  USAGE.md
odoo-bringout-oca-geospatial-website_geoengine/: README.md  pyproject.toml
odoo-bringout-oca-geospatial-website_geoengine/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  USAGE.md
odoo-bringout-oca-hr-holidays-hr_holidays_leave_auto_approve/: README.md  pyproject.toml
odoo-bringout-oca-hr-holidays-hr_holidays_leave_auto_approve/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  USAGE.md
odoo-bringout-oca-hr-hr_course_survey/: README.md  pyproject.toml
odoo-bringout-oca-hr-hr_course_survey/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  USAGE.md
odoo-bringout-oca-hr-hr_personal_equipment_stock/: README.md  pyproject.toml
odoo-bringout-oca-hr-hr_personal_equipment_stock/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  USAGE.md
odoo-bringout-oca-hr-hr_personal_equipment_variant_configurator/: README.md  pyproject.toml
odoo-bringout-oca-hr-hr_personal_equipment_variant_configurator/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  (+5 more)
odoo-bringout-oca-hr-resource_multi_week_calendar/: README.md  pyproject.toml
odoo-bringout-oca-iot-iot_key_employee_rfid/: README.md  pyproject.toml
odoo-bringout-oca-pos-pos_loyalty_exclude/: README.md  pyproject.toml
odoo-bringout-oca-pos-pos_meal_voucher/: README.md  pyproject.toml
odoo-bringout-oca-pos-pos_partner_location_abstract/: README.md  pyproject.toml
odoo-bringout-oca-pos-pos_partner_location_google_map/: README.md  pyproject.toml
odoo-bringout-oca-pos-pos_price_to_weight/: README.md  pyproject.toml
(+5310 files in other folders)
