[project]
name = "odoo-bringout-oca-ddmrp-ddmrp"
version = "16.0.0"
description = "DDMRP - Demand Driven Material Requirements Planning"
authors = [
    { name = "Ernad Husremovic", email = "hernad@bring.out.ba" }
]
dependencies = [
    "odoo-bringout-oca-ddmrp-purchase_stock>=16.0.0",
    "odoo-bringout-oca-ddmrp-stock_demand_estimate>=16.0.0",
    "odoo-bringout-oca-ddmrp-web_widget_bokeh_chart>=16.0.0",
    "odoo-bringout-oca-ddmrp-mrp_multi_level>=16.0.0",
    "odoo-bringout-oca-ddmrp-base_cron_exclusion>=16.0.0",
    "odoo-bringout-oca-ddmrp-stock_warehouse_calendar>=16.0.0",
    "odoo-bringout-oca-ddmrp-stock_helper>=16.0.0",
    "requests>=2.25.1"
]
readme = "README.md"
requires-python = ">= 3.11"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11", 
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
]

[project.urls]
homepage = "https://github.com/bringout/0"
repository = "https://github.com/bringout/0"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["ddmrp"]

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.4.1",
]
