[project]
name = "odoo-bringout-oca-ddmrp-ddmrp_adjustment"
version = "16.0.0"
description = "DDMRP Adjustment - Allow to apply factor adjustments to buffers."
authors = [
    { name = "Ernad Husremovic", email = "hernad@bring.out.ba" }
]
dependencies = [
    "odoo-bringout-oca-ddmrp-ddmrp>=16.0.0",
    "odoo-bringout-oca-ddmrp-web_widget_x2many_2d_matrix>=16.0.0",
    "odoo-bringout-oca-ddmrp-date_range>=16.0.0",
    "requests>=2.25.1"
]
readme = "README.md"
requires-python = ">= 3.11"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11", 
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
]

[project.urls]
homepage = "https://github.com/bringout/0"
repository = "https://github.com/bringout/0"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["ddmrp_adjustment"]

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.4.1",
]
