[project]
name = "odoo-bringout-oca-ddmrp-ddmrp_exclude_moves_adu_calc"
version = "16.0.0"
description = "DDMRP Exclude Moves ADU Calc - Define additional rules to exclude certain moves from ADU calculation"
authors = [
    { name = "Ernad Husremovic", email = "hernad@bring.out.ba" }
]
dependencies = [
    "odoo-bringout-oca-ddmrp-ddmrp>=16.0.0",
    "requests>=2.25.1"
]
readme = "README.md"
requires-python = ">= 3.11"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11", 
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
]

[project.urls]
homepage = "https://github.com/bringout/0"
repository = "https://github.com/bringout/0"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["ddmrp_exclude_moves_adu_calc"]

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.4.1",
]
