[project]
name = "odoo-bringout-oca-iot-iot_key_employee_rfid"
version = "16.0.0"
description = "IoT Key Employee RFID - 
        Use an Employee RFID Card as an IoT Key"
authors = [
    { name = "Ernad Husremovic", email = "hernad@bring.out.ba" }
]
dependencies = [
    "odoo-bringout-oca-iot-hr_attendance_rfid>=16.0.0",
    "odoo-bringout-oca-iot-iot_rule>=16.0.0",
    "requests>=2.25.1"
]
readme = "README.md"
requires-python = ">= 3.11"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11", 
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
]

[project.urls]
homepage = "https://github.com/bringout/0"
repository = "https://github.com/bringout/0"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["iot_key_employee_rfid"]

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.4.1",
]
